--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   		<nav>
   			<% if is_logged_in?%>
   				<%= link_to "Log out", logout_path, method: :delete %>
+  				<%= link_to "New post", new_post_path %>
   			<%else%>
   				<%= link_to "Log in", login_path %>
   			<%end%>
